samples/_failures_safe/1761344539_77a710_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c954c98.c: In function ‘main’:
./samples/SAFE/__tmp_4c954c98.c:148:9: error: expected declaration or statement at end of input
  148 |         ratio = 100.0 * total_compressed / total_original;
      |         ^~~~~
./samples/SAFE/__tmp_4c954c98.c:148:9: error: expected declaration or statement at end of input
